fix hairline gap between header and body

--- a/packages/front-end/components/PreLaunchChecklist/PreLaunchChecklist.module.scss
+++ b/packages/front-end/components/PreLaunchChecklist/PreLaunchChecklist.module.scss
@@ -41,6 +41,7 @@
   border-bottom: none;
   box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.25);
   clip-path: inset(-20px -20px 0 -20px);
+  margin-bottom: -1px;
 
   &:hover {
     background-color: color-mix(
